# polynomial

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: polynomial.hpp
src/: polynomial.cpp
test/: CMakeLists.txt  test1.cpp
